# Project-Dissertation-Project-Concolic-Execution-using-River

./: README.md
concolic_execution_algorithm/testingExecution/: CMakeCache.txt  CMakeLists.txt  MainProject  Makefile  cmake_install.cmake  coverageInputs.txt  main  main.cpp  testOutput.txt  trace.simple.out  trace.simple.txt
concolic_execution_algorithm/testingExecution/backup/: main.cpp
presentation/: Proiect-de-Diploma-Ceachi-Bogdan.pptx
